Revised code for prevent page overlapped by navbar when click any link on navbar.

--- a/style.css
+++ b/style.css
@@ -41,7 +41,6 @@ body{
     border-bottom: 1px solid #ddd;
     padding-top: 10px;
     padding-bottom: 10px;
-    scroll-margin-top: 70px;
 }
 .content p {
     font-size: 16px;
